--- a/html/tableau.html
+++ b/html/tableau.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+        <!--Jacob Dow 12/10/2021-->
         <title>Tableau Site - Jacob Dow</title>
         <link href="../styles/bootstyles.css" rel="stylesheet" type="text/css">
     </head>
@@ -119,12 +120,10 @@
                     </script>
                     <p class="caption">Phones have the highest sales. This graph shows the actual and forecasted sales of phones in New York through November 2015.</p>
         </div>
-        <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+        <p>&nbsp;</p>
         <div class="common footer footstyle">
             Created using <a class="tablink" href="https://www.tableau.com/" title="Link to Tableau site" target="_blank">Tableau</a>.
             <div>Jacob Dow | 2021</div>
         </div>
-
     </body>
-
 </html>
