--- a/html/about.html
+++ b/html/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <!--Jacob Dow-->
+    <!--Jacob Dow 12/10/2021-->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="../index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="#"  id="top">About</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="#">About</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="tableau.html">Tableau</a></li>
                     </ul>
                 </div>
@@ -41,7 +41,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1 class="title" >About Me</h1>
+                            <h1 class="title"  id="top">About Me</h1>
                             <span class="subheading">
                                 <a class="byulink" href="#res">Resume</a> 
                                  |
@@ -90,10 +90,13 @@
                                 </ul>
                             </li>
                         </ol>
-                        <div class="resume" id="plife">Personal Life:</div>
+                        <div class="resume" id="plife">
+                            Personal Life:
+                        </div>
                         <div>My wife and I currently live in <a href="https://utah.com/provo" title="link to page about Provo" class="link" target="_blank">Provo, Utah</a>. We love spending time together in the outdoors with our goldendoodle puppy.
                             We also love to travel and see new places. I love fishing and playing with my dog.
-                        </div> <br>
+                        </div> 
+                        <br>
                     </div>
                     
 
